--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,20 @@ body {
     background-color: rgb(238, 238, 238);
 }
 
-div {
+#help {
+    height: calc(70vh - 80px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 150%;
+    color: #d6d3d3;
+    position: absolute;
+    font-family: arial;
+    width: 100%;
+    user-select: none;
+}
+
+#jsMenu {
     height: calc(70vh - 50px);
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
     margin: 15px;
@@ -52,8 +65,20 @@ button:hover {
 
 ul {
     list-style: none;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 10px;
+    top: 0;
+    left: 0;
+    margin-left: 210px;
+    display: none;
+}
+
+ul:first-child {
+    position: relative;
+    margin-left: 0;
+    display: block;
 }
 
 li {
@@ -62,14 +87,14 @@ li {
     width: 200px;
     border-bottom: 1px solid #999;
     position: relative;
-    min-height: 15px;
+    min-height: 20px;
 }
 
 li input {
-    width: 160px;
+    width: 148px;
     border: unset;
     position: absolute;
-    right: 0;
+    left: 40px;
     top: 0;
     height: calc(100% - 10px);
     padding: 5px;
@@ -87,4 +112,51 @@ li i {
     justify-content: center;
     align-items: center;
     width: 40px;
+}
+
+li i.disable {
+    cursor: context-menu;
+}
+
+li > i:hover {
+    background-color: #bebdbd;
+}
+
+.controller {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 12px;
+}
+
+.controller i {
+    width: 100%;
+    height: 33.33%;
+    font-size: 50%;
+    color: #ccc;
+    display: flex;
+    position: unset;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f7f7;
+}
+
+.controller i:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.disable {
+    opacity: 0.2;
+    background-color: #f00 !important;
+}
+
+li:hover > ul, li:focus > ul {
+    display: block;
+}
+
+input:focus {
+    outline: none;
+    background-color: rgba(0, 255, 0, 0.144);
 }
