--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ button {
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #ccc;
-    font-size: 130%;
+    font-size: 100%;
     cursor: pointer;
     color: #8a8a8a;
     transition: background-color 0.3s;
@@ -72,7 +72,7 @@ ul {
     top: 0;
     left: 0;
     margin-left: 210px;
-    display: none;
+    /* display: none; */
 }
 
 ul:first-child {
@@ -159,4 +159,8 @@ li:hover > ul, li:focus > ul {
 input:focus {
     outline: none;
     background-color: rgba(0, 255, 0, 0.144);
+}
+
+input::placeholder, textarea::placeholder {
+    color: #ccc;
 }
